- added timestamps for created, modified and published to a dataset - show new bottom bar which contains additional information like creation date of dataset - reload tree when dataset has changed
